[metadata]
name = saturnin-core
version = 0.7.0
description = Modules required by some Saturnin core services
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = Pavel Císař
author_email = pcisar@users.sourceforge.net
license = MIT
license_file = LICENSE
url = http://firebirdsql.org/en/saturnin/
keywords = Saturnin Core Services Firebird Butler Platform ZeroMQ
project_urls =
    Documentation = https://saturnin-core.rtfd.io
    Bug Reports = https://github.com/FirebirdSQL/saturnin-core/issues
    Funding = https://www.firebirdsql.org/en/donate/
    Source = https://github.com/FirebirdSQL/saturnin-core
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Topic :: System :: Systems Administration
    Topic :: System :: Monitoring
    Topic :: System :: Logging
    Topic :: Database

[options]
zip_safe = True
python_requires = >=3.8, <4
install_requires =
    saturnin>=0.7.0
packages = find_namespace:

[options.packages.find]
include = saturnin.*

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=0

