[build-system]
requires = ["setuptools >= 53.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saturnin.firebird.trace.parser"
version = "0.1.0"
description = "Firebird trace parser microservice"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Pavel Císař", email = "pcisar@users.sourceforge.net"}]
keywords = ["Firebird", "trace", "parser", "micro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging",
    "Topic :: Database"
    ]
dependencies = [
    "saturnin>=0.7.0",
    "firebird-lib>=1.0.1"
    ]

[project.urls]
Home = "https://github.com/FirebirdSQL/saturnin"
Documentation = "https://saturnin-core.rtfd.io"
"Bug Reports" = "https://github.com/FirebirdSQL/saturnin-core/issues"
Funding = "https://www.firebirdsql.org/en/donate/"
Source = "https://github.com/FirebirdSQL/saturnin-core"

[tool.saturnin.metadata]
component-type = "service"
uid = "e9567080-85ed-5773-b09b-64b7fe7164f5"
descriptor = "api:SERVICE_DESCRIPTOR"
