[build-system]
requires = ["setuptools >= 53.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saturnin.text.writer"
version = "0.2.0"
description = "Text writer microservice"
readme = "README.rst"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Pavel Císař", email = "pcisar@users.sourceforge.net"}]
keywords = ["text", "writer", "micro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Logging"
    ]
dependencies = [
    "saturnin>=0.7.0"
    ]

[project.urls]
Home = "https://github.com/FirebirdSQL/saturnin"
Documentation = "https://saturnin-core.rtfd.io"
"Bug Reports" = "https://github.com/FirebirdSQL/saturnin-core/issues"
Funding = "https://www.firebirdsql.org/en/donate/"
Source = "https://github.com/FirebirdSQL/saturnin-core"

[tool.saturnin.metadata]
component-type = "service"
uid = "514faccc-a938-5109-ab0c-8d403e898709"
descriptor = "api:SERVICE_DESCRIPTOR"
